Process Hacker

2.20
 * NEW/IMPROVED:
   * Added column selection for handle list
   * Added CPU column to threads list
   * Added pool usage and minimum/maximum working set columns
   * Implemented Properties button for Thread handles
   * Set descending sort as the default for most numeric columns
   * Extended header context menu
   * Removed tooltip text truncation
   * Improved cycle-based CPU usage calculation
   * Set default KProcessHacker security level to only allow 
     connections when Process Hacker is running as administrator. 
     See README.txt for instructions on how to restore the old 
     behavior.
   * Updated ExtendedTools plugin:
     * Added Disk tab
     * Added Hard Faults, Hard Faults Delta and Peak Threads 
       columns to process tree list
     * Added Firewall Status column
 * FIXED:
   * Fixed file name resolution bug
   * Save settings on shutdown/logoff
   * Fixed state highlighting bug
   * Fixed command line propagation for -elevate
   * Fixed tree list mouse wheel handling
   * Fixed saving network list

2.19
 * NEW/IMPROVED:
   * Added cycle-based CPU usage for Windows 7
   * Added Show CPU Below 0.01
   * Added OS Context column
   * Rewrote graph drawing code for improved performance
   * Optimized retrieval of cycle time and private working set 
     information for Windows 7
   * Added Open File Location to process context menu and 
     reorganized some items
   * Added checkboxes to Terminator
 * FIXED:
   * Crash when sorting by Time Stamp
   * GDI handle leak in drag selection

2.18
 * NEW/IMPROVED:
   * Completely rewritten tree list control:
     * Process Name column is now fixed to the left
     * Tooltips for column headers
     * Improved performance
     * Bug fixes
   * Added more process tree list columns
   * Added Time stamp column to network list
   * Date/time display is now swapped (so time is shown before 
     date)
   * Added W3 terminator test
   * Added DotNetTools plugin