@@ -514,17 +514,19 @@ BEGIN
     LTEXT           "N/A",IDC_CONTEXTSWITCHES,75,228,51,8,SS_ENDELLIPSIS
     LTEXT           "Cycles:",IDC_STATICBL6,7,239,24,8
     LTEXT           "N/A",IDC_CYCLES,41,239,85,8,SS_ENDELLIPSIS
-    LTEXT           "Base Priority:",IDC_STATICBL9,136,217,44,8
-    LTEXT           "Priority:",IDC_STATICBL8,136,207,26,8
-    LTEXT           "I/O Priority:",IDC_STATICBL10,136,228,39,8
-    LTEXT           "Page Priority:",IDC_STATICBL11,136,239,44,8
+    LTEXT           "Base Priority:",IDC_STATICBL9,136,205,44,8
+    LTEXT           "Priority:",IDC_STATICBL8,136,195,26,8
+    LTEXT           "I/O Priority:",IDC_STATICBL10,136,216,39,8
+    LTEXT           "Page Priority:",IDC_STATICBL11,136,227,44,8
     LTEXT           "State:",IDC_STATICBL7,7,195,21,8
-    LTEXT           "N/A",IDC_STATE,75,195,178,8,SS_ENDELLIPSIS
-    LTEXT           "N/A",IDC_PRIORITY,187,207,66,8
-    LTEXT           "N/A",IDC_BASEPRIORITY,187,217,66,8
-    LTEXT           "N/A",IDC_IOPRIORITY,187,228,66,8
-    LTEXT           "N/A",IDC_PAGEPRIORITY,187,239,66,8
+    LTEXT           "N/A",IDC_STATE,41,195,85,8,SS_ENDELLIPSIS
+    LTEXT           "N/A",IDC_PRIORITY,195,195,58,8
+    LTEXT           "N/A",IDC_BASEPRIORITY,195,205,58,8
+    LTEXT           "N/A",IDC_IOPRIORITY,195,216,58,8
+    LTEXT           "N/A",IDC_PAGEPRIORITY,195,227,58,8
     CONTROL         "",IDC_LIST,"PhTreeNew",WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_TABSTOP | 0x22,7,7,246,156,WS_EX_CLIENTEDGE
+    LTEXT           "Ideal Processor:",IDC_STATICBL12,136,239,53,8
+    LTEXT           "N/A",IDC_IDEALPROCESSOR,195,239,58,8
 END
 
 IDD_PROCHANDLES DIALOGEX 0, 0, 260, 260
